samples/_failures_safe/1761642841_633a48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4796d89e.c: In function ‘main’:
./samples/SAFE/__tmp_4796d89e.c:157:5: error: expected expression at end of input
  157 |     if (len == 0 || (len ==
      |     ^~
./samples/SAFE/__tmp_4796d89e.c:157:5: error: expected declaration or statement at end of input
